fix(footer): fix bug that sidebar would be exposed if footer length is too short(fix #60)

--- a/src/scss/_partial/_partial/_footer.scss
+++ b/src/scss/_partial/_partial/_footer.scss
@@ -1,6 +1,9 @@
 // ========== footer ========== //
 .footer {
-    width: 100%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     padding: 2.5rem 0 1.5rem 0;
     background-color: #fff;
 }
